Calculate desired stop loss at entry time and set it in cps.